--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ${{ matrix.os }}  
     env:
       REGISTRY_IMAGE: cbonamy/of2506_4_kraken
-    #needs: build
     strategy:
       fail-fast: false
       matrix:
@@ -51,7 +50,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
-          context: docker
+          context: openfoam2506
           file: openfoam2506/Dockerfile
           #tags: ${{ env.REGISTRY_IMAGE }}
 
